js/src/tests/test262/built-ins/NativeErrors/SyntaxError/prototype/message.js
assert
.
sameValue
(
SyntaxError
.
prototype
.
message
"
"
)
;
verifyNotEnumerable
(
SyntaxError
.
prototype
"
message
"
)
;
verifyWritable
(
SyntaxError
.
prototype
"
message
"
)
;
verifyConfigurable
(
SyntaxError
.
prototype
"
message
"
)
;
reportCompare
(
0
0
)
;
